Avoid hidden overflow

--- a/ui/src/components/SubTopBar.scss
+++ b/ui/src/components/SubTopBar.scss
@@ -1,5 +1,5 @@
-@import "../styles/colors";
-@import "../styles/transitions";
+@import '../styles/colors';
+@import '../styles/transitions';
 
 .sub-top-bar {
   position: absolute;
@@ -8,7 +8,6 @@
   left: 0;
   height: 2rem;
   padding: 0 0.5rem;
-  overflow: hidden;
   background: $gray-lightest;
 
   .tool-tip-wrapper {
